not completed, issues with H1, header, wrap, dementions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,20 @@
 * {
     box-sizing: border-box;
 }
+h1 {
+    font-size: 25px;
+    color: #4aaaa5;
+    border-bottom: 5px solid #cccccc;
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
+    margin-top: 20px;
+    padding-bottom: 20px;
+    
+}
 
 body {
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    line-height: 30px;
+    line-height: 1.5px;
     text-align: left;
     width: 960px;
 }
@@ -18,45 +27,39 @@ header {
     width: 200px;
     text-align: center;
     float: left;
-    font-size: 20px;
     font-weight: bold;
-    vertical-align: middle;
     margin-bottom: 0px;
-    padding-top: 10px;
-    border-bottom: solid #dddddd;
+    padding-top: -10px;
+    border-bottom: none;
     margin-left: -120px;
-    margin-right: 120px;
-}
-
-h2 {
-    color: #4aaaa5;
-    border-bottom: 3px solid #dddddd;
-    font-family: 'Georgia', 'Times New Roman', Times, serif;
-    margin-top: 2px;
-    padding-bottom: 3px;
+    margin-right: 220px;
+    font-size: 20;
 }
 
 nav {
-    width: 270px;
+    width: 750px;
     float: right;
     text-align: center;
-    margin-right: 125px;
+    margin-right: 0px;
 }
 
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    color: #cccccc;
 }
 
 li {
     float: left;
-    width: 33%;
+    width: 30%;
     padding: 10px;
+    color: #cccccc;
+    text-align: bottom;
 }
 
 li.border {
-    border-right: 1px solid #dddddddd;
+    border-right: 1px solid #cccccc;
     padding: 10px;
 }
 
@@ -64,13 +67,21 @@ section {
     background-color: #ffffff;
     float: left;
     color: #777777;
-    border: 10px solid #dddddd;
+    border: 2px solid #dddddd;
 }
 
-input,
-textarea {
+input {
     width: 100%;
     padding: 10px 20px 10px 10px;
+    margin: 8px 0;
+    border-color: #dddddd;
+    border-style: solid;
+    border-width: thin;
+}
+
+textarea {
+    width: 100%;
+    padding: 100px 100px 100px 100px;
     margin: 8px 0;
     border-color: #dddddd;
     border-style: solid;
@@ -81,86 +92,60 @@ footer {
     clear: both;
     margin: 0 auto;
     vertical-align: middle;
-    padding: 18px;
-    height: 70 px;
+    padding: 0;
+    height: 40px;
     background-color: #666666;
     width: 100%;
     border-bottom: none;
-    color: #777777;
+    color: white;
     text-align: center;
 }
 
 .header-container {
     border-bottom: 2px solid #cccccc;
     Background-color: #ffffff;
-    height: 60px;
+    height: 50px;
+    text-align: bottom;
+    font-size: 20px;
+    margin-bottom: 0;
 }
 
 .main-container {
     clear: both;
     overflow: auto;
     margin: 0 auto;
-    background-color: #ffffff;
-    height: 600px;
+    height: 0 auto;
     width: 100%;
     border-bottom: 5px solid #4aaaa5;
+    background-image: url(/assets/images/background-middle.png)
 }
 
-#project {
-    width: 250px;
+.project {
+    float: left;
+    position: relative;
+    top: 30px;
+    width: 150px;
     height: 100px;
-    margin: 20px;
+    margin: 30px;
+    margin-left:0px;
+    padding: 0;
+    margin-top: -10px;
 }
 
-.portfolio-project1 {
+.project-title {
     float: left;
     position: relative;
+    top: 10;
     width: 100%;
-    margin-left: -30px;
-}
-
-.portfolio-project2 {
-    float: left;
-    position: relative;
-    top: 0;
-    width: 100%;
-
-}
-
-.portfolio-project3 {
-    float: left;
-    position: relative;
-    padding-top: 20%;
-    margin-top: 40px;
-    width: 100%;
-    margin-left: -10px;
-}
-
-.portfolio-project4 {
-    float: left;
-    position: relative;
-    margin-top: 80px;
-    width: 100%;
-    margin-left: 90px;
-}
-
-.portfolio-project5 {
-    float: left;
-    position: relative;
-    width: 100%;
-    margin-left: -500px;
-}
-
-.project-name {
-    float: left;
-    position: left;
-    top: -50px;
-    width: 1005;
-    height: 30px;
+    height: 25px;
     background-color: #4aaaa5;
     color: #ffffff;
     text-align: center;
+    margin-top: -30px;
+    margin-left: 0px;
+    padding: 0px;
 }
+
 
 .button {
     background-color: #4aaaa5;
@@ -173,35 +158,35 @@ footer {
     top: -8px;
 }
 
-#portfolio {
+#contact-info,
+#portfolio,
+#main-bio {
     position: relative;
     text-align: left;
     width: 650px;
     top: 30px;
     margin-left: 125px;
     margin-bottom: 50px;
+    width: 560px;
 }
-
-#main-bio {
-    height: auto;
+#contact-info{
     padding: 20px;
-    position: relative;
-    text-align: left;
-    width: 600px;
-    top: 30px;
-    margin-left: 125px;
-    margin-bottom: 50px;
+    height: 600px;
 }
 
 #bio-image {
     clear: both;
     float: left;
     margin-right: 20px;
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
 }
 
-#project-portfolio {
+#portfolio {
     padding: 15px;
-    height: 500px;
+    height: 600px;
+}
+#main-bio{
+    clear: both;
+    height: 600px;
 }
